# meshflow

./: .gitignore  README.md  install.sh  pyproject.toml  setup.py
meshflow/: __init__.py  cli.py  detector.py  generator.py  onshape.py  restructure.py  templates.py
tests/: test_detector.py
